--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,8 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
-	</dependencies>
+	</dependencies>top
+
 
 	<build>
 		<plugins>
